--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,7 @@
 
 <!-- CSS -->
 <link rel="stylesheet" href="{{ "/assets/css/main.css" | absolute_url }}" />
+<link rel="stylesheet" href="{{ "/assets/css/monokai.css" | absolute_url }}" />
 <noscript><link rel="stylesheet" href="{{ "/assets/css/noscript.css" | absolute_url }}" /></noscript>
 
 {% if site.tags != "" %}
