--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,11 +3,8 @@ layout: default
 ---
 <!-- Add Font Awesome for TOC icon -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-
 <style>
     .post-container {
-        display: grid;
-        grid-template-columns: 1fr 300px;
         gap: 2rem;
         max-width: 1200px;
         margin: 0 auto;
@@ -415,10 +412,12 @@ layout: default
 
     /* Comments Section Styles */
     .comments-wrapper {
-        width: 100%;
+        width: 100vw;
         background: var(--card-background);
         padding: 3rem 0;
         margin-top: 3rem;
+        margin-left: calc(-50vw + 50%);
+        margin-right: calc(-50vw + 50%);
     }
 
     .comments-container {
