--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -293,6 +293,7 @@ layout: default
             margin-bottom: 1.5rem;
             opacity: 0.9;
             padding: 0 0.5rem;
+            text-align: center;
         }
 
         .subscribe-button {
