--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -33,6 +33,10 @@ layout: default
         width: 100%;
     }
 
+    .about-content p {
+        text-align: center;
+    }
+
     .about-header h1 {
         font-size: clamp(2rem, 5vw, 3rem);
         font-weight: 800;
