feat: update site title, add archive layout, and enhance navigation links

--- a/_includes/archive.html
+++ b/_includes/archive.html
@@ -1,3 +1,4 @@
+<div style="text-align: center;">
 <h2>Archive</h2>
 {% capture temptags %}
   {% for tag in site.tags %}
@@ -8,5 +9,6 @@
 {% for temptag in sortedtemptags %}
   {% assign tagitems = temptag | split: '#' %}
   {% capture tagname %}{{ tagitems[1] }}{% endcapture %}
-  <a class="no-underline" href="/tag/{{ tagname }}"><code class="highligher-rouge"><nobr>{{ tagname }}</nobr></code></a>
+  <a class="no-underline" href="/blog/tag/{{ tagname | slugify }}/"><code class="highligher-rouge"><nobr>{{ tagname }}</nobr></code></a>
 {% endfor %}
+</div>
