--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -429,7 +429,7 @@
             <a href="{{ '/' | relative_url }}" class="site-title">{{ site.title }}</a>
             <nav>
                 <ul class="nav-links">
-                    <li><a href="{{ '/blog' | relative_url }}">Blog</a></li>
+                    <li><a href="{{ '/archive' | relative_url }}">Archive</a></li>
                     <li><a href="{{ '/about' | relative_url }}">About</a></li>
                 </ul>
             </nav>
@@ -446,7 +446,7 @@
     <footer class="site-footer">
         <div class="footer-content">
             <div class="footer-section">
-                <p>&copy; {{ site.time | date: '%Y' }} {{ site.title }}. All rights reserved.</p>
+                <p>&copy; {{ site.time | date: '%Y' }} Bill. All Rights Reserved.</p>
             </div>
         </div>
     </footer>
