--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -328,8 +328,7 @@ layout: default
         <div class="hero-content">
             <h1>{{ site.description }}</h1>
             <div class="cta-buttons">
-                <a href="{{ '/blog' | relative_url }}" class="cta-button">Explore</a>
-                <a href="{{ '/about' | relative_url }}" class="cta-button">About Me</a>
+                <a href="{{ '/blog' | relative_url }}" class="cta-button">Explore More</a>
             </div>
         </div>
     </div>
